--- a/kadai_006/weather.html
+++ b/kadai_006/weather.html
@@ -5,13 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>jQueryの基礎を学ぼう_6章課題</title>
-  <link rel="stylesheet" href="css/weather.css">
+  <link rel="stylesheet" href="weather.css">
 </head>
 
 <body>
   <h1 id="target">今日の天気予報</h1>
   <p>今日は晴れです！</p>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="js/weather.js"></script>
+  <script src="weather.js"></script>
 </body>
 </html>
